--- a/UART/compile.cfg
+++ b/UART/compile.cfg
@@ -1,7 +1,7 @@
 [View]
-Entity=testbench_for_test_uart
+Entity=
 Architecture=
-TopLevelType=2
+TopLevelType=
 [file:.\src\Test_UART.bde]
 Enabled=1
 [file:.\src\UART_RX.asf]
